# trajecto

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/trajecto/: __init__.py  __main__.py  app.py
src/trajecto/core/: __init__.py  applog.py  bodies.py  constants.py  orbit_determination.py  orbit_input.py  orbital_mechanics.py  paths.py  state_vectors.py  timeutils.py  units.py
src/trajecto/modules/: __init__.py  base.py  circular_orbit.py  dynamics_view.py  hohmann_transfer.py  kepler_laws.py  maneuver_sandbox.py  registry.py
src/trajecto/resources/: .gitkeep
src/trajecto/ui/: __init__.py  main_window.py
src/trajecto/ui/widgets/: __init__.py  action_bar.py  animation_bar.py  explanation_panel.py  log_panel.py  parameter_panel.py  plot_options_panel.py  plot_panel.py  result_panel.py
tests/: test_animation_contract.py  test_animation_ui.py  test_bodies.py  test_circular_orbit.py  test_hohmann.py  test_hohmann_experiment.py  test_hohmann_modes.py  test_kepler.py  test_maneuver_sandbox.py  test_orbit_determination.py  test_orbit_input.py  test_orbital_mechanics.py  test_plot_options.py  test_state_vectors.py  test_time_based_animation.py
