[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajecto"
version = "0.1.0"
description = "Interaktive Desktop-Lernsoftware fuer Orbitalmechanik"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Trajecto Team" }]
dependencies = [
    "PySide6>=6.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
trajecto = "trajecto.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trajecto = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
